tests/lifetime/path_borrower/path_borrower_obligation_errors.err.expected
error: at 30:5: [INIT-MoveWithUnfulfilledContainedRef] In function 'move_with_unfulfilled_ref_obs', block 'entry': cannot move 'b': contained reference 'b.p' has unfulfilled obligation (pointee is uninitialized, but must be initialized before the reference expires)
    |
 24 | fn move_with_unfulfilled_ref_obs(x: i64) {
 25 |   b: RefBox;
    |   ---------- reference declared here
 26 |   y: i64;
    |
    | ...
    |
 29 |     y = move b.p.*;
 30 |     call take_box(move b);
    |     ^^^^^^^^^^^^^^^^^^^^^
 31 |     return
    |
